[package]
name = "slow_movie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wallpaper = "3.2.0"
image = "0.24.5"
native-dialog = "0.6.3"
thiserror = "1.0.38"
log = "0.4"
fast_log = {version = "1.5" , features = ["lz4","zip","gzip"]}